--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Randomize Me</string>
+    <string name="instructions_text">Enter an item per line then press Randomize.<br/>Press and hold Randomize to shuffle the list</string>
 </resources>
